# CropIQ

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt
config/: config.yaml
data/processed/: counties_geo.json  features.parquet
docs/: data_card.md  deploy_hf.md  limitations.md  model_card.md  problem_card.md
models/: best_model.pkl
notebooks/: 01_eda.ipynb  02_model_analysis.ipynb
reports/: results.md
scripts/: build_evaluation_artifacts.py  precompute_predictions.py  run_gate.py
src/: __init__.py  config.py  logging_setup.py  paths.py  train.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/concepts/: __init__.py  evaluation.py  experiment.py  explanation.py  feature_matrix.py  growing_season.py  soil_profile.py  weather_series.py  yield_observation.py  yield_predictor.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  build_dataset.py  fetch_nass.py  fetch_noaa.py  fetch_ssurgo.py
src/inference/: __init__.py  prediction_engine.py
tests/: conftest.py  test_api.py  test_concepts_feature_matrix.py  test_concepts_growing_season.py  test_concepts_yield_observation.py  test_concepts_yield_predictor.py  test_prediction_engine.py  test_setup.py
